--- a/setup-vault-gke/values.overrides.yaml
+++ b/setup-vault-gke/values.overrides.yaml
@@ -1,3 +1,7 @@
+# https://developer.hashicorp.com/vault/tutorials/kubernetes/kubernetes-raft-deployment-guide?in=vault%2Fkubernetes#configure-vault-helm-chart
+# default values of hashicorp/vault-helm:
+# https://raw.githubusercontent.com/hashicorp/vault-helm/refs/heads/main/values.yaml
+
 global:
   enabled: true
   namespace: "vault"
@@ -15,53 +19,32 @@ server:
   ingress:
     enabled: true
     labels: {}
-      # traffic: external
+    # https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#deprecated_annotation
+    #ingressClassName: ""
     annotations: {}
-      # |
-      # kubernetes.io/ingress.class: nginx
+      kubernetes.io/ingress.class: gce
       # kubernetes.io/tls-acme: "true"
-      #   or
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
-    ingressClassName: ""
-
-    # As of Kubernetes 1.19, all Ingress Paths must have a pathType configured. The default value below should be sufficient in most cases.
-    # See: https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types for other possible values.
     pathType: Prefix
-
-    # When HA mode is enabled and K8s service registration is being used,
-    # configure the ingress to point to the Vault active service.
-    activeService: true
     hosts:
-      - host: chart-example.local
+      - host: vault.hc-8732d2178369440c886cb59aee6.gcp.sbx.hashicorpdemo.com
         paths: []
-    ## Extra paths to prepend to the host configuration. This is useful when working with annotation based services.
-    extraPaths: []
-    # - path: /*
-    #   backend:
-    #     service:
-    #       name: ssl-redirect
-    #       port:
-    #         number: use-annotation
+          - path: /
+            backend:
+              service:
+                name: vault
+                port:
+                  number: 8200
     tls: []
     #  - secretName: chart-example-tls
     #    hosts:
     #      - chart-example.local
 
-  # hostAliases is a list of aliases to be added to /etc/hosts. Specified as a YAML list.
-  hostAliases: []
-  # - ip: 127.0.0.1
-  #   hostnames:
-  #     - chart-example.local
-
   extraArgs: "-config=/vault/userconfig/vault-kms-credentials/vault-unseal.key.json"
   # extraEnvironmentVars is a list of extra environment variables to set with the stateful set. These could be
   # used to include variables required for auto-unseal.
-  extraEnvironmentVars: {}
-    # GOOGLE_REGION: global
-    # GOOGLE_PROJECT: myproject
-    # GOOGLE_APPLICATION_CREDENTIALS: /vault/userconfig/myproject/myproject-creds.json
-
+  extraEnvironmentVars:
+    VAULT_SKIP_VERIFY: true
+    # VAULT_CACERT: /vault/userconfig/tls-ca/tls.crt
   # extraSecretEnvironmentVars is a list of extra environment variables to set with the stateful set.
   # These variables take value from existing Secret objects.
   extraSecretEnvironmentVars: []
@@ -74,10 +57,24 @@ server:
       secret:
         secretName: vault-kms-credentials
         defaultMode: 420
+    # - name: tls-server
+    #   secret:
+    #     secretName: tls-server
+    #     defaultMode: 420
+    # - name: tls-ca
+    #   secret:
+    #     secretName: tls-ca
+    #     defaultMode: 420
   volumeMounts:
     - mountPath: /vault/userconfig/vault-kms-credentials
       name: vault-kms-credentials
       readOnly: true
+    # - mountPath: /vault/userconfig/tls-server
+    #   name: tls-server
+    #   readOnly: true
+    # - mountPath: /vault/userconfig/tls-ca
+    #   name: tls-ca
+    #   readOnly: true
 
   # Enables network policy for server pods
   networkPolicy:
@@ -100,9 +97,7 @@ server:
           protocol: TCP
 
   standalone:
-    enabled: "-"
-    config: |-
-      ui = true
+    enabled: false
   ha:
     enabled: true
     replicas: 3
@@ -117,10 +112,6 @@ server:
     # If set to null, this will be set to https://$(HOSTNAME).{{ template "vault.fullname" . }}-internal:8201
     clusterAddr: null
 
-    # Enables Vault's integrated Raft storage.  Unlike the typical HA modes where
-    # Vault's persistence is external (such as Consul), enabling Raft mode will create
-    # persistent volumes for Vault to store data according to the configuration under server.dataStorage.
-    # The Vault cluster will coordinate leader elections and failovers internally.
     raft:
       # Enables Raft integrated storage
       enabled: true
@@ -128,8 +119,9 @@ server:
       setNodeId: true
       config: |-
         ui = true
+        cluster_name = "vault-cluster"
         listener "tcp" {
-          tls_disable = 1
+          tls_disable = true
           address = "[::]:8200"
           cluster_address = "[::]:8201"
         }
@@ -142,6 +134,15 @@ server:
         }
         storage "raft" {
           path = "/vault/data"
+          retry_join {
+            leader_api_addr = "http://vault-ha-0.vault-ha-internal:8200"
+          }
+          retry_join {
+            leader_api_addr = "http://vault-ha-1.vault-ha-internal:8200"
+          }
+          retry_join {
+            leader_api_addr = "http://vault-ha-2.vault-ha-internal:8200"
+          }
         }
         service_registration "kubernetes" {}
     # config: ""
@@ -149,7 +150,6 @@ server:
 ui:
   enabled: true
   publishNotReadyAddresses: true
-  # The service should only contain selectors for active Vault pod
   activeVaultPodOnly: false
   serviceType: "ClusterIP"
   serviceNodePort: null
