chore: tidy up codes.

--- a/setup-vault-gke/docker-compose/compose.yaml
+++ b/setup-vault-gke/docker-compose/compose.yaml
@@ -13,7 +13,7 @@ services:
     volumes:
       - ./vault.hcl:/vault/config/vault.hcl
       # gitignored
-      - ./vault-unseal.key.json:/vault/config/vault-unseal.key.json
+      - ../vault-kms.key.json:/vault/config/vault-unseal.key.json
       - ./vault.hclic:/vault/config/vault.hclic
     cap_add:
       - IPC_LOCK
