--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ build.log
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
+*.pkrvars.hcl
+*.pkrvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
