--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ crash.log
 crash.*.log
 build.log
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# Exclude all parameter files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version
 # control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
@@ -43,3 +43,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Vagrant local directories
+.vagrant
