--- a/learn-hcp-vagrant/Vagrantfile
+++ b/learn-hcp-vagrant/Vagrantfile
@@ -12,8 +12,7 @@ Vagrant.configure("2") do |config|
     app.vm.provider "docker" do |d|
       d.name = "db"
       d.image = "bitnami/mysql"
-      d.env = {"MYSQL_ROOT_PASSWORD": "root"}
-      #d.env = {"MYSQL_ROOT_PASSWORD": ENV['MYSQL_ROOT_PASSWORD']}
+      d.env = {"MYSQL_ROOT_PASSWORD": ENV['MYSQL_ROOT_PASSWORD']}
       d.ports = ["3306:3306"]
     end
   end
