--- a/learn-vault-operator/vaultauth.yaml
+++ b/learn-vault-operator/vaultauth.yaml
@@ -3,14 +3,15 @@ apiVersion: secrets.hashicorp.com/v1beta1
 kind: VaultAuth
 metadata:
   namespace: default
-  name: vault-auth
+  name: k8s-auth
 spec:
   # point to name of VaultConnection CR
-  vaultConnectionRef: vault-connection
+  vaultConnectionRef: vault-on-kind
+  # Same as `vault auth enable -path k8s kubernetes`
   method: kubernetes
-  mount: kubernetes
+  mount: k8s
+  # Same as `vault read auth/k8s/role/readonly`
   kubernetes:
-    # Role on Vault
-    role: raadonly
+    role: readonly
     # k8s SA using to fetch secrets from Vault
     serviceAccount: default
