--- a/learn-vault-operator/vaultconnections.yaml
+++ b/learn-vault-operator/vaultconnections.yaml
@@ -4,6 +4,6 @@ kind: VaultConnection
 metadata:
   # provide namespace where app will refer vault's secrets
   namespace: default
-  name: vault-connection
+  name: vault-on-kind
 spec:
-  address: http://vault.vault.svc.cluster.local:8200
+  address: http://vault-server.vault.svc.cluster.local:8200
